--- a/src/app/pages/projects/create/type/installations/installations.component.html
+++ b/src/app/pages/projects/create/type/installations/installations.component.html
@@ -16,6 +16,7 @@
         <div class="card">
             <div class="card-header">
                 <h4 class="card-title mb-0">Instalaciones y procesos</h4>
+                <p>Selecciona una instalación y conéctala con artículos legales</p>
             </div>
 
             <div class="card-body">
