--- a/src/app/pages/projects/create/type/type.component.html
+++ b/src/app/pages/projects/create/type/type.component.html
@@ -42,7 +42,11 @@ align-items: center;">
             </div>
             <div class="card-footer" style="border-top: 0px;">
                 <div class="text-end">
-                    <button mat-raised-button class="btn btn-danger w-lg waves-effect waves-light" routerLink="/projects/{{project_id}}/type/bodylegal">Iniciar</button>
+                    <button mat-raised-button class="btn btn-danger w-lg waves-effect waves-light" routerLink="/projects/{{project_id}}/type/bodylegal" style="
+                    background: #767676;
+                    border-color: #767676;
+                    cursor: no-drop;
+                ">Iniciar</button>
                 </div>
             </div>
         </div>
@@ -60,7 +64,11 @@ align-items: center;">
             </div>
             <div class="card-footer" style="border-top: 0px;">
                 <div class="text-end">
-                    <button mat-raised-button class="btn btn-danger w-lg waves-effect waves-light">Iniciar</button>
+                    <button mat-raised-button class="btn btn-danger w-lg waves-effect waves-light" style="
+                    background: #767676;
+                    border-color: #767676;
+                    cursor: no-drop;
+                ">Iniciar</button>
                 </div>
             </div>
         </div>
