--- a/src/app/pages/projects/create/compliance/follow/follow.component.html
+++ b/src/app/pages/projects/create/compliance/follow/follow.component.html
@@ -181,7 +181,7 @@
                             <div class="col-md-4">
                                 <div class="card-body">
                                     Adjuntar imagen o archivo de respaldo
-                                    <dropzone class="dropzone_sec"></dropzone>
+                                    <dropzone class="dropzone_sec" [message]="'Haz Click o arrastra la imagen a cargar'" (success)="onFileSelectedEvaluation($event)"></dropzone>
                                 </div>
                             </div>
                             <div class="col-md-8">
