--- a/src/app/pages/projects/create/compliance/assess/assess.component.html
+++ b/src/app/pages/projects/create/compliance/assess/assess.component.html
@@ -70,8 +70,8 @@
                     <div class="col-lg-12" style="margin-bottom: 20px;">
                         <div class="row">
                             <div class="col-md-1">
-                                <img [src]="tarea.evaluationFinding.img" (error)="imgError($event)" alt="user img"
-                                        class="users-avatar-shadow avatar mr-3 rounded-circle" height="64" width="64">
+                                <img [src]="tarea && tarea.evaluationFinding ? tarea.evaluationFinding.hallazgoImg : ''" (error)="imgError($event)" alt="user img"
+                                        class="users-avatar-shadow avatar mr-3" height="64" width="64">
                             </div>
                             
                             <div class="col-md-8">
@@ -141,7 +141,7 @@
                             <div class="col-md-12">
                                 <div class="card-body">
                                     Adjuntar imagen o archivo de respaldo
-                                    <dropzone class="dropzone_sec"></dropzone>
+                                    <dropzone class="dropzone_sec" [message]="'Haz Click o arrastra la imagen a cargar'" (success)="onFileSelectedEvaluation($event)"></dropzone>
                                 </div>
                             </div>
                         </div>
