--- a/src/app/pages/projects/create/compliance/detail/compliance-detail.component.html
+++ b/src/app/pages/projects/create/compliance/detail/compliance-detail.component.html
@@ -256,7 +256,7 @@
                                                     data-bs-toggle="modal" data-bs-target="#showModal" routerLink="/projects/{{project_id}}/compliance/{{installation_id}}/Follow/{{data.id}}"
                                                     >Evaluar</button>
                                             </div>
-                                            <div class="edit" *ngIf="!validateRol(3)">
+                                            <div class="edit" *ngIf="(!validateRol(3) && !validateRol(5)) || (validateRol(5) && data.evaluations && (data.evaluations.estado == 'CUMPLE' || data.evaluations.estado == 'NO CUMPLE' || data.evaluations.estado == 'CUMPLE PARCIALMENTE'))">
                                                 <button class="btn btn-sm btn-primary edit-item-btn" routerLink="/projects/{{project_id}}/compliance/{{installation_id}}/Task/{{data.id}}"
                                                     ><!--Revisar--><i class="ri-eye-line"></i></button>
                                             </div>
