--- a/src/app/pages/projects/create/compliance/task/task.component.html
+++ b/src/app/pages/projects/create/compliance/task/task.component.html
@@ -59,10 +59,50 @@
     </div>
 </div>
 
-<div class="row">
+<div class="row" *ngIf="articulo && articulo.evaluations && articulo.evaluations.estado && articulo.evaluations.estado == 'CUMPLE'">
     <div class="col-lg-12">
         <div class="card">
             <div class="card-header">
+                <span class="float-end text-secondary">
+                    <span
+                                            class="badge badge-soft-{{articulo && articulo.evaluations &&articulo.evaluations.estado && articulo.evaluations.estado == 'CUMPLE' ? 'success' : (articulo && articulo.evaluations && articulo.evaluations.estado && articulo.evaluations.estado == 'CUMPLE PARCIALMENTE' ? 'warning' : 'danger')}} text-uppercase">{{articulo && articulo.evaluations && articulo.evaluations.estado ? (articulo.evaluations.estado == 'CUMPLE' ? 'Cumple' : (articulo && articulo.evaluations && articulo.evaluations.estado == 'CUMPLE PARCIALMENTE' ? 'Cumple Parcialmente' : 'No Cumple')) : 'Sin evaluar'}}</span>
+                </span>
+
+                <h4 class="card-title mb-0">Evaluación</h4>
+            </div>
+
+            <div class="card-body">
+                    <div id="customerList">
+                            <div class="row">
+                                <div class="col-lg-12" style="margin-bottom: 20px;">
+                                    <div class="row">
+                                        <div class="col-md-1">
+                                            <img [src]="articulo.evaluations.evaluacionImg
+                                            " (error)="imgError($event)" alt="Hallazgo respaldo"
+                                            class="users-avatar-shadow avatar mr-3" height="64" width="64"><!--rounded-circle-->
+                                        </div>
+                                        <div class="col-md-7">
+                                            <h5>Comentario:</h5> 
+                                            <p>{{articulo.evaluations.comentario}}</p>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                    </div>  
+            </div>
+        </div>
+    </div>
+</div>
+
+<div class="row" *ngIf="articulo && articulo.evaluations && articulo.evaluations.estado && articulo.evaluations.estado != 'CUMPLE'">
+    <div class="col-lg-12">
+        <div class="card">
+            <div class="card-header">
+                <span class="float-end text-secondary">
+                    <span
+                                            class="badge badge-soft-{{articulo && articulo.evaluations && articulo.evaluations.estado && articulo.evaluations.estado == 'CUMPLE' ? 'success' : (articulo && articulo.evaluations && articulo.evaluations.estado && articulo.evaluations.estado == 'CUMPLE PARCIALMENTE' ? 'warning' : 'danger')}} text-uppercase">{{articulo && articulo.evaluations && articulo.evaluations.estado ? (articulo.evaluations.estado == 'CUMPLE' ? 'Cumple' : (articulo && articulo.evaluations && articulo.evaluations.estado == 'CUMPLE PARCIALMENTE' ? 'Cumple Parcialmente' : 'No Cumple')) : 'Sin evaluar'}}</span>
+                </span>
+
                 <h4 class="card-title mb-0">Hallazgos</h4>
             </div>
 
@@ -73,8 +113,9 @@
                             <div class="col-lg-12" style="margin-bottom: 20px;">
                                 <div class="row">
                                     <div class="col-md-1">
-                                        <img [src]="data.findings.img" (error)="imgError($event)" alt="user img"
-                                        class="users-avatar-shadow avatar mr-3 rounded-circle" height="64" width="64">
+                                        <img [src]="data.findings.hallazgoImg
+                                        " (error)="imgError($event)" alt="Hallazgo respaldo"
+                                        class="users-avatar-shadow avatar mr-3" height="64" width="64"><!--rounded-circle-->
                                     </div>
                                     <div class="col-md-2">
                                         <h5>Fecha Creación:</h5>
@@ -155,7 +196,7 @@
     </div>
 </div>
 
-<div class="row"><!-- *ngIf="idHallazgo"-->
+<div class="row" *ngIf="articulo && articulo.evaluations && articulo.evaluations.estado && articulo.evaluations.estado != 'CUMPLE'"><!-- *ngIf="idHallazgo"-->
     <div class="col-lg-12">
         <div class="card">
             <!--<div class="card-header">
