--- a/src/app/pages/projects/create/create.component.html
+++ b/src/app/pages/projects/create/create.component.html
@@ -28,7 +28,7 @@
                     <!--<input type="text" class="form-control" id="project-title-input"
                         placeholder="Escribe descripción del Proyecto" formControlName="descripcion">-->
                         <textarea rows="3" class="form-control" id="project-title-input"
-                        placeholder="Escribe descripción del Plan de trabajo" formControlName="descripcion"></textarea>
+                        placeholder="Escribe descripción del Proyecto" formControlName="descripcion"></textarea>
                     </form>
                 </div>
             </div>
@@ -47,7 +47,7 @@
 <ng-container *ngIf="typeCreate">
     <div class="row">
         
-        <ng-container *ngFor="let t of types;let impar=odd;">
+        <!--<ng-container *ngFor="let t of types;let impar=odd;">
         <div class="col-xxl-5">
             <div class="card border card-border-dark" style="border-color: #767676 !important;min-height: 250px;">
                 <div class="card-header" style="background-color: #dce0e4 !important;min-height: 70px;">
@@ -55,9 +55,6 @@
                 </div>
                 <div class="card-body">
                     <p class="card-text">{{t.descripcion}}</p>
-                    <!--<div class="text-end">
-                        <button mat-raised-button class="btn btn-danger w-lg waves-effect waves-light" (click)="saveProject(t.id)">Iniciar</button>
-                    </div>-->
                 </div>
                 <div class="card-footer" style="border-top: 0px;">
                     <div class="text-end">
@@ -65,13 +62,40 @@
                     </div>
                 </div>
             </div>
-        </div><!-- end col -->
+        </div>
         
         <div class="col-xxl-2" *ngIf="!impar">
         </div>
-        </ng-container>
-    </div><!-- end row -->
-      
+        </ng-container>-->
+        <div class="col-xxl-4 col-lg-6">
+            <div class="card card-body">
+                <div class="avatar-sm mb-3">
+                    <div class="avatar-title bg-soft-success text-success fs-17 rounded">
+                        <i class="ri-add-line"></i>
+                    </div>
+                </div>
+                <h4 class="card-title">Identifica las obligaciones legales y permisos de tu proyecto</h4>
+                <p class="card-text text-muted">En tan solo 5 pasos, completa los campos requeridos y obtendrás un reporte gráfico y ejecutivo de las obligaciones legales aplicables a tu proyecto.</p>
+                <a href="javascript:void(0);" class="btn btn-success" style="
+                background: #767676;
+                border-color: #767676;
+                cursor: no-drop;
+            " (click)="saveProject(1)">Iniciar</a>
+            </div>
+        </div>
+        <div class="col-xxl-4 col-lg-6">
+            <div class="card card-body">
+                <div class="avatar-sm mb-3">
+                    <div class="avatar-title bg-soft-success text-success fs-17 rounded">
+                        <i class="ri-add-line"></i>
+                    </div>
+                </div>
+                <h4 class="card-title">Vincula tus intalaciones a obligaciones legales</h4>
+                <p class="card-text text-muted">Revisa cuales son los articulos legales que te aplican y vinculalos a tus obligaciones para gestionar su cumplimiento.</p>
+                <a href="javascript:void(0);" class="btn btn-success"  (click)="saveProject(1)">Iniciar</a>
+            </div>
+        </div>
+    </div>
 </ng-container>
 
 <app-toastsp aria-live="polite" aria-atomic="true"></app-toastsp>
