--- a/src/app/pages/projects/create/create.component.html
+++ b/src/app/pages/projects/create/create.component.html
@@ -45,8 +45,8 @@
 </div>
 </ng-container>
 <ng-container *ngIf="typeCreate">
-    <div class="row">
-        
+    <!--<div class="row">-->
+    <div class="row justify-content-center" style="padding-top: 10%;">
         <!--<ng-container *ngFor="let t of types;let impar=odd;">
         <div class="col-xxl-5">
             <div class="card border card-border-dark" style="border-color: #767676 !important;min-height: 250px;">
@@ -67,6 +67,9 @@
         <div class="col-xxl-2" *ngIf="!impar">
         </div>
         </ng-container>-->
+        <div class="col-12">
+        <h4 style="text-align: center;">Define el tipo de proyecto</h4>
+        </div>
         <div class="col-xxl-4 col-lg-6">
             <div class="card card-body">
                 <div class="avatar-sm mb-3">
