--- a/src/app/pages/projects/create/create.component.html
+++ b/src/app/pages/projects/create/create.component.html
@@ -71,23 +71,23 @@
         <h4 style="text-align: center;">Define el tipo de proyecto</h4>
         </div>
         <div class="col-xxl-4 col-lg-6">
-            <div class="card card-body">
+            <div class="card card-body" style="min-height: 250px;">
                 <div class="avatar-sm mb-3">
-                    <div class="avatar-title bg-soft-success text-success fs-17 rounded">
+                    <div class="avatar-title fs-17 rounded" style="background-color: #767676;">
                         <i class="ri-add-line"></i>
                     </div>
                 </div>
                 <h4 class="card-title">Identifica las obligaciones legales y permisos de tu proyecto</h4>
-                <p class="card-text text-muted">En tan solo 5 pasos, completa los campos requeridos y obtendrás un reporte gráfico y ejecutivo de las obligaciones legales aplicables a tu proyecto.</p>
+                <p class="card-text text-muted">Completa los campos requeridos y obtendrás un reporte gráfico y ejecutivo de las obligaciones legales aplicables a tu proyecto.</p>
                 <a href="javascript:void(0);" class="btn btn-success" style="
                 background: #767676;
                 border-color: #767676;
                 cursor: no-drop;
-            " (click)="saveProject(1)">Iniciar</a>
+            ">Iniciar</a>
             </div>
         </div>
         <div class="col-xxl-4 col-lg-6">
-            <div class="card card-body">
+            <div class="card card-body" style="min-height: 250px;">
                 <div class="avatar-sm mb-3">
                     <div class="avatar-title bg-soft-success text-success fs-17 rounded">
                         <i class="ri-add-line"></i>
