correcciones varias reu miercoles

--- a/src/app/pages/extrapages/profile/profile/profile.component.html
+++ b/src/app/pages/extrapages/profile/profile/profile.component.html
@@ -86,6 +86,10 @@
                                                             <td class="text-muted">{{userData.telefono}}</td>
                                                         </tr>
                                                         <tr>
+                                                            <th class="ps-0" scope="row">Cargo :</th>
+                                                            <td class="text-muted">{{userData.cargo}}</td>
+                                                        </tr>
+                                                        <tr>
                                                             <th class="ps-0" scope="row">Correo Electrónico :</th>
                                                             <td class="text-muted">{{userData.email}}</td>
                                                         </tr>
