--- a/src/app/pages/projects/create/type/type.component.html
+++ b/src/app/pages/projects/create/type/type.component.html
@@ -42,11 +42,11 @@ align-items: center;">
             </div>
             <div class="card-footer" style="border-top: 0px;">
                 <div class="text-end">
-                    <button mat-raised-button class="btn btn-danger w-lg waves-effect waves-light" routerLink="/projects/{{project_id}}/type/bodylegal" style="
+                    <button mat-raised-button class="btn btn-danger w-lg waves-effect waves-light" style="
                     background: #767676;
                     border-color: #767676;
                     cursor: no-drop;
-                ">Iniciar</button>
+                ">Iniciar</button><!--routerLink="/projects/{{project_id}}/type/bodylegal"-->
                 </div>
             </div>
         </div>
