--- a/src/app/pages/projects/create/compliance/assess/assess.component.html
+++ b/src/app/pages/projects/create/compliance/assess/assess.component.html
@@ -130,6 +130,7 @@
     </div>
 </div>
 
+<form [formGroup]="taskForm" class="tablelist-form">
 <div class="row">
     <div class="col-lg-12">
         <div class="card">
@@ -138,10 +139,16 @@
                 <div class="col-xxl-12">
                     <div class="card">
                         <div class="row g-0">
-                            <div class="col-md-12">
+                            <div class="col-md-4">
                                 <div class="card-body">
                                     Adjuntar imagen o archivo de respaldo
                                     <dropzone class="dropzone_sec" [message]="'Haz Click o arrastra la imagen a cargar'" (success)="onFileSelectedEvaluation($event)"></dropzone>
+                                </div>
+                            </div>
+                            <div class="col-md-8">
+                                <div class="card-body">
+                                    Comentario
+                                    <ckeditor [editor]="Editor" data="" formControlName="comentario"></ckeditor>
                                 </div>
                             </div>
                         </div>
@@ -151,6 +158,7 @@
         </div>
     </div>
 </div>
+</form>
 
 <!--<div class="row">
     <div class="col-lg-12">
