--- a/src/app/pages/projects/list/list.component.html
+++ b/src/app/pages/projects/list/list.component.html
@@ -40,6 +40,7 @@
   </div>
 </div>
 
+<div style="min-height: 600px;">
 <div class="row">
  
   <app-toastsp aria-live="polite" aria-atomic="true"></app-toastsp>
@@ -148,6 +149,7 @@
         No hay datos para mostrar
     </div>
   </div>
+</div>
 </div>
 
 <!-- Inicio card with background
@@ -319,8 +321,8 @@
 </div>-->
 <!-- Fin with icon header -->
 
-<div class="row g-0 text-center text-sm-start align-items-center mb-4" style="padding: 0px;position: fixed;bottom: 75px;width: 100%;">
-  <div class="col-sm-5">
+<div class="pagination justify-content-start mb-0"><!-- class="row g-0 text-center text-sm-start align-items-center mb-4" style="padding: 0px;position: fixed;bottom: 75px;width: 100%;"-->
+  <div class="col-sm-7">
       <div>
           <p class="mb-sm-0 text-muted">Mostrando página <span class="fw-semibold">1</span> de <span class="fw-semibold">{{pageTotal(pagLength)}}</span> de <span class="fw-semibold text-decoration-underline">{{pagLength}}</span> registros</p>
       </div>
