--- a/src/app/pages/projects/team/team.component.html
+++ b/src/app/pages/projects/team/team.component.html
@@ -255,7 +255,7 @@
         <!--end row-->
     </div>
 </div>
-<div class="row">
+<div class="row" style="min-height: 600px;">
     <div class="col-lg-12">
         <div>
             <div [ngbNavOutlet]="Border"></div>
@@ -635,7 +635,7 @@
 </div>
 <!--end row-->
 
-<div class="pagination pagination-separated justify-content-center justify-content-sm-end mb-sm-0"><!--class="row g-0 text-center text-sm-start align-items-center mb-4" style="padding: 0px;position: initial;bottom: 75px;width: 100%;"-->
+<div class="pagination justify-content-start mb-0"><!--class="row g-0 text-center text-sm-start align-items-center mb-4" style="padding: 0px;position: initial;bottom: 75px;width: 100%;"-->
     <div class="col-sm-5">
         <div>
             <p class="mb-sm-0 text-muted">Mostrando página<span class="fw-semibold">1</span> de <span class="fw-semibold">{{pageTotal(pagLength)}}</span> de <span class="fw-semibold text-decoration-underline">{{pagLength}}</span> registros</p>
