--- a/src/app/pages/auditor/create/create.component.html
+++ b/src/app/pages/auditor/create/create.component.html
@@ -188,11 +188,14 @@
 
                     <div *ngIf="installations_select.length > 0">            
                             <div class="list-group">
-                                
-                                <ng-container *ngFor="let s of installations_select;">
-                                    <label class="list-group-item">
-                                        <i style="color: green;" class="ri-checkbox-circle-fill"></i> {{s.nombre}}
-                                    </label>
+                                <ng-container *ngFor="let g of installations_select_group;">
+                                    {{g.areaNombre}}
+
+                                    <ng-container *ngFor="let s of g.installations;">
+                                        <label class="list-group-item">
+                                            <i style="color: green;" class="ri-checkbox-circle-fill"></i> {{s.nombre}}
+                                        </label>
+                                    </ng-container>
                                 </ng-container>
                             </div>
                         </div>
@@ -280,9 +283,14 @@
 </ng-template>
 </ng-template>
 <ng-template #TabContent2>
+    
+    <ng-container *ngFor="let g of installations_select_group;">
     <div class="row">
         <div class="col-lg-12">
             <div class="card">
+            <div class="card-header">
+                {{g.areaNombre}}
+            </div>
                 
             <div class="card-body">
                 <div id="customerList">
@@ -319,7 +327,7 @@
                                 </tr>
                             </thead>
                             <tbody>
-                                <tr *ngFor="let data of installations_select" id="lj_{{data.id}}">
+                                <tr *ngFor="let data of g.installations" id="lj_{{data.id}}">
                                     <td><ngb-highlight [result]="data.nombre"
                                             ></ngb-highlight></td>
                                     <td><ngb-highlight [result]="data.total_cuerpos ? data.total_cuerpos : 0"
@@ -370,7 +378,7 @@
                             <div class="dataTables_info mb-2" id="tickets-table_info" role="status" aria-live="polite">
                                 Mostrando página
                                 1 de
-                                <!--{{service.endIndex}}-->1 de {{installations_select.length}}
+                                <!--{{service.endIndex}}-->1 de {{g.installations.length}}
                                 registros
                             </div>
                         </div>
@@ -389,6 +397,7 @@
             </div>
         </div>
     </div>
+    </ng-container>
 
     <div class="row">
         <div class="col-lg-12"> 
