--- a/src/app/pages/auditor/create/body-legal/body-legal.component.html
+++ b/src/app/pages/auditor/create/body-legal/body-legal.component.html
@@ -1,7 +1,3 @@
-<!-- Start Breadcrumbs -->
-<app-breadcrumbs title="Paso 4: Conecta la normativa a tus procesos" [breadcrumbItems]="breadCrumbItems"></app-breadcrumbs>
-<!-- End Breadcrumbs -->
-
 <!--preloader-->
 <div id="preloader" style="opacity: 0px !important;background-color: #000 !important;visibility: hidden;">
     <div id="status">
@@ -17,7 +13,13 @@
          <div class="card-header" *ngIf="installation_id">
             <div class="row">
                 <div class="col-xxl-3 col-lg-3" style="padding: 10px;">
-                    <h4 class="card-title mb-0">{{installation_nombre}}</h4>
+                    <h4 class="card-title mb-0">
+                        <button class="btn btn-sm px-2 fs-22"
+                        [style.cursor]="'pointer'" (click)="backClicked()">
+                        <i class="ri-arrow-left-s-line"></i>
+                        </button>
+                    {{installation_nombre}}
+                    </h4>
                 </div>
                 
                 <div class="col-xxl-3 col-lg-3">
@@ -106,12 +108,8 @@
                                     <td>
                                         
                                         <div class="d-flex gap-2">
-                                            <div class="edit" *ngIf="installation_id">
-                                                <button class="btn btn-sm btn-success edit-item-btn" routerLink="/projects/{{project_id}}/type/bodylegal/{{data.normaId}}/Detail/{{installation_id}}/{{installation_nombre}}"
-                                                    >Conectar</button>
-                                            </div>
-                                            <div class="edit" *ngIf="!installation_id">
-                                                <button class="btn btn-sm btn-success edit-item-btn" routerLink="/projects/{{project_id}}/type/bodylegal/{{data.normaId}}/Detail"
+                                            <div class="edit">
+                                                <button class="btn btn-sm btn-success edit-item-btn" (click)="conectarBody(data.normaId)"
                                                     >Conectar</button>
                                             </div>
                                         </div>
