--- a/src/app/pages/auditor/create/body-legal/detail/body-legal-detail.component.html
+++ b/src/app/pages/auditor/create/body-legal/detail/body-legal-detail.component.html
@@ -1,7 +1,3 @@
-<!-- Start Breadcrumbs -->
-<app-breadcrumbs title="Paso 4: Conecta la normativa a tus procesos" [breadcrumbItems]="breadCrumbItems"></app-breadcrumbs>
-<!-- End Breadcrumbs -->
-
 <!--preloader-->
 <div id="preloader" style="opacity: 0px !important;background-color: #000 !important;visibility: hidden;">
     <div id="status">
@@ -17,7 +13,13 @@
             <div class="card-header">
                 <div class="row">
                     <div class="col-xxl-3 col-lg-3" style="padding: 10px;">
-                        <h4 class="card-title mb-0">{{installation_nombre}}</h4>
+                        <h4 class="card-title mb-0">
+                            <button class="btn btn-sm px-2 fs-22"
+                            [style.cursor]="'pointer'" (click)="backClicked()">
+                            <i class="ri-arrow-left-s-line"></i>
+                            </button>
+                        {{installation_nombre}}
+                        </h4>
                     </div>
                     
                     <div class="col-xxl-3 col-lg-3">
