--- a/src/app/pages/auditor/create/create.component.html
+++ b/src/app/pages/auditor/create/create.component.html
@@ -32,7 +32,7 @@
                                             <ng-template [ngTemplateOutlet]="TabContent"></ng-template>
                                         </ng-template>
                                     </li>
-                                    <li [ngbNavItem]="2" [disabled]="auditoriaForm.invalid">
+                                    <li [ngbNavItem]="2" [disabled]="!project_id">
                                         <a ngbNavLink (click)="changeTab(2)">
                                             <span class="d-sm-block">Vincular Instalaciones</span>
                                         </a>
@@ -155,7 +155,7 @@
         <div class="row">
             <div class="col-lg-12"> 
                 <div style="float:right;"><!--class="row justify-content-end"-->
-                    <button type="button" class="btn btn-success btn-label waves-effect right waves-light" (click)="siguiente()"><i class="ri-arrow-right-line label-icon align-middle fs-16 ms-2"></i> Siguiente</button>
+                    <button type="button" class="btn btn-success btn-label waves-effect right waves-light" (click)="saveAuditoria()"><i class="ri-arrow-right-line label-icon align-middle fs-16 ms-2"></i> Siguiente</button>
                 </div>
             </div>
         </div>
@@ -283,7 +283,7 @@
 </ng-template>
 </ng-template>
 <ng-template #TabContent2>
-    
+    <ng-container *ngIf="!showBodyLegal && !showBodyLegalDetail">
     <ng-container *ngFor="let g of installations_select_group;">
     <div class="row">
         <div class="col-lg-12">
@@ -356,7 +356,7 @@
                                             <div class="hstack gap-3 fs-15">
                                                 <div class="edit">
                                                     <button class="btn btn-sm btn-success edit-item-btn"
-                                                        data-bs-toggle="modal" data-bs-target="#showModal"
+                                                        (click)="vincular(data)"
                                                         >Vincular</button>
                                                 </div>
                                                 <!--<a href="javascript:void(0);" class="link-primary"
@@ -399,13 +399,26 @@
     </div>
     </ng-container>
 
-    <div class="row">
-        <div class="col-lg-12"> 
-            <div style="float:right;"><!--class="row justify-content-end"-->
-                <button type="button" class="btn btn-success btn-label waves-effect right waves-light" (click)="finalizar()"><i class="ri-checkbox-circle-fill label-icon align-middle fs-16 ms-2"></i> Finalizar</button>
-            </div>
+</ng-container>
+
+<ng-container *ngIf="showBodyLegal && !showBodyLegalDetail">
+    <app-body-legal-auditor [project_id]="project_id" [installation_id]="installation_id" [installation_nombre]="installation_nombre" 
+    (backFunction) = 'backEvent($event)' (conectarFunction) = 'conectarEvent($event)'></app-body-legal-auditor>
+</ng-container>
+
+<ng-container *ngIf="!showBodyLegal && showBodyLegalDetail">
+    <app-body-legal-auditor-detail [project_id]="project_id" [installation_id]="installation_id" [installation_nombre]="installation_nombre" [cuerpo_id]="cuerpo_id" 
+    (backFunction) = 'backEvent2($event)'></app-body-legal-auditor-detail>
+</ng-container>
+
+<div class="row">
+    <div class="col-lg-12"> 
+        <div style="float:right;"><!--class="row justify-content-end"-->
+            <button type="button" class="btn btn-success btn-label waves-effect right waves-light" (click)="finalizar()"><i class="ri-checkbox-circle-fill label-icon align-middle fs-16 ms-2"></i> Finalizar</button>
         </div>
     </div>
+</div>
+
 </ng-template>
 
 <!--<div class="col-sm-12 justify-content-end" style="display: block;padding: 0px;position: fixed;bottom: 60px;">
